--- a/configs/api.toml
+++ b/configs/api.toml
@@ -1,1 +1,9 @@
-port = ":8080"
+dbname = "postgres"
+port = "5432"
+user = "postgres"
+password = "postgres"
+sslmode = "disable"
+
+host = ":8085"
+host1 = ":8086"
+logger_level = "debug"
