--- a/configs/conf.toml
+++ b/configs/conf.toml
@@ -1,4 +1,4 @@
-host = ":8085"
+port_addr = ":8082"
 host1 = ":8086"
 logger_level = "debug"
 storage = { dbname = "postgres", port = "5432", user = "postgres", password = "postgres", sslmode = "disable" }
