--- a/configs/conf_test.toml
+++ b/configs/conf_test.toml
@@ -1,3 +1,3 @@
-host = ":8090"
+port_addr = ":8090"
 logger_level = "debug"
 storage = { dbname = "postgresTEST", port = "5432", user = "postgres", password = "postgres", sslmode = "disable" }
